--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,16 @@ dependencies:
   get_storage: ^2.1.1
   http: ^1.2.2
   dio: ^5.9.0
-  intl: ^0.20.2
+  intl: ^0.19.0 #định dạng ngày giờ, ngôn ngữ, tiền tệ
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  smooth_page_indicator: ^1.2.1
+  smooth_page_indicator: ^1.2.1 #thanh dot slider
   sizer: ^3.1.3 #reponsive size
-  hugeicons: ^1.1.0 # icon
+  hugeicons: ^1.1.0 #icon
+  qr_flutter: ^4.1.0 #QR contactUs
+  dash_chat_2: ^0.0.21 #chat customer
+  flutter_dotenv: ^5.1.0 #ẩn key AI chatbox
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +69,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env #key
     - assets/images/
     - assets/images/onboarding/
 
