--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,7 @@ dependencies:
     sdk: flutter
   get: ^4.6.5
   get_storage: ^2.1.1
-  http: ^1.2.2
-  dio: ^5.9.0
+  dio: ^5.9.0 #call rest full api
   intl: ^0.19.0 #định dạng ngày giờ, ngôn ngữ, tiền tệ
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,7 +44,6 @@ dependencies:
   dash_chat_2: ^0.0.21 #chat customer
   flutter_dotenv: ^5.1.0 #ẩn key AI chatbox
   shimmer: ^3.0.0 #ánh sáng chạy động ở disabled/màn hình chờ
-  curved_navigation_bar: ^1.0.6 #thanh điều hướng bottom
 
 dev_dependencies:
   flutter_test:
